--- a/vty.cabal
+++ b/vty.cabal
@@ -43,7 +43,7 @@ library
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
-                       lens,
+                       lens >= 3.9.0.2,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -68,7 +68,6 @@ library
                        Data.Terminfo.Eval
                        Data.Marshalling
                        Graphics.Vty.Debug
-                       Graphics.Vty.Debug.Image
                        Graphics.Vty.DisplayRegion
                        Graphics.Vty.DisplayAttributes
                        Graphics.Vty.Image.Internal
@@ -79,6 +78,8 @@ library
                        Graphics.Vty.Terminal.MacOSX
                        Graphics.Vty.Terminal.XTermColor
                        Graphics.Vty.Terminal.TerminfoBased
+
+  other-modules:       Graphics.Vty.Inline.Hack
 
   c-sources:           cbits/gwinsz.c
                        cbits/set_term_timing.c
