--- a/vty.cabal
+++ b/vty.cabal
@@ -170,6 +170,7 @@ test-suite verify-terminfo-based
                        Verify.Graphics.Vty.Picture
                        Verify.Graphics.Vty.Image
                        Verify.Graphics.Vty.Span
+                       Verify.Graphics.Vty.Terminal
 
   build-depends:       vty,
                        Cabal == 1.17.*,
@@ -362,6 +363,9 @@ test-suite verify-inline
   hs-source-dirs:      test
 
   test-module:         VerifyInline
+
+  other-modules:       Verify
+                       Verify.Graphics.Vty.Terminal
 
   build-depends:       vty,
                        Cabal == 1.17.*,
