--- a/vty.cabal
+++ b/vty.cabal
@@ -418,46 +418,14 @@ test-suite verify-parse-terminfo-caps
                        utf8-string >= 0.3 && < 0.4,
                        vector >= 0.7
   
-
-test-suite verify-picture-ops
+test-suite verify-simple-span-generation
   default-language:    Haskell2010
 
   type:                detailed-0.9
 
   hs-source-dirs:      test
 
-  test-module:         VerifyPictureOps
-
-  other-modules:       Verify
-
-  build-depends:       vty,
-                       Cabal == 1.17.*,
-                       QuickCheck >= 2.4,
-                       random == 1.0.*,
-                       base >= 4 && < 5,
-                       bytestring,
-                       containers,
-                       deepseq >= 1.1 && < 1.4,
-                       ghc-prim,
-                       lens,
-                       mtl >= 1.1.1.0 && < 2.2,
-                       parallel >= 2.2 && < 3.3,
-                       parsec >= 2 && < 4,
-                       terminfo >= 0.3 && < 0.4,
-                       text >= 0.11.3,
-                       unix,
-                       utf8-string >= 0.3 && < 0.4,
-                       vector >= 0.7
-  
-
-test-suite verify-picture-to-span
-  default-language:    Haskell2010
-
-  type:                detailed-0.9
-
-  hs-source-dirs:      test
-
-  test-module:         VerifyPictureToSpan
+  test-module:         VerifySimpleSpanGeneration
 
   other-modules:       Verify
                        Verify.Graphics.Vty.Attributes
@@ -474,26 +442,20 @@ test-suite verify-picture-to-span
                        bytestring,
                        containers,
                        deepseq >= 1.1 && < 1.4,
-                       ghc-prim,
-                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
-                       parallel >= 2.2 && < 3.3,
-                       parsec >= 2 && < 4,
-                       terminfo >= 0.3 && < 0.4,
                        text >= 0.11.3,
                        unix,
                        utf8-string >= 0.3 && < 0.4,
                        vector >= 0.7
   
-
-test-suite verify-span-ops
+test-suite verify-crop-span-generation
   default-language:    Haskell2010
 
   type:                detailed-0.9
 
   hs-source-dirs:      test
 
-  test-module:         VerifySpanOps
+  test-module:         VerifyCropSpanGeneration
 
   other-modules:       Verify
                        Verify.Graphics.Vty.Attributes
@@ -510,17 +472,41 @@ test-suite verify-span-ops
                        bytestring,
                        containers,
                        deepseq >= 1.1 && < 1.4,
-                       ghc-prim,
-                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
-                       parallel >= 2.2 && < 3.3,
-                       parsec >= 2 && < 4,
-                       terminfo >= 0.3 && < 0.4,
                        text >= 0.11.3,
                        unix,
                        utf8-string >= 0.3 && < 0.4,
                        vector >= 0.7
-  
+
+test-suite verify-layers-span-generation
+  default-language:    Haskell2010
+
+  type:                detailed-0.9
+
+  hs-source-dirs:      test
+
+  test-module:         VerifyLayersSpanGeneration
+
+  other-modules:       Verify
+                       Verify.Graphics.Vty.Attributes
+                       Verify.Graphics.Vty.DisplayRegion
+                       Verify.Graphics.Vty.Picture
+                       Verify.Graphics.Vty.Image
+                       Verify.Graphics.Vty.Span
+
+  build-depends:       vty,
+                       Cabal == 1.17.*,
+                       QuickCheck >= 2.4,
+                       random == 1.0.*,
+                       base >= 4 && < 5,
+                       bytestring,
+                       containers,
+                       deepseq >= 1.1 && < 1.4,
+                       mtl >= 1.1.1.0 && < 2.2,
+                       text >= 0.11.3,
+                       unix,
+                       utf8-string >= 0.3 && < 0.4,
+                       vector >= 0.7
 
 test-suite verify-utf8-width
   default-language:    Haskell2010
