start refactoring input layer for an easy to understand mapping of input bytes to events

--- a/vty.cabal
+++ b/vty.cabal
@@ -59,7 +59,8 @@ library
                        Graphics.Vty.Image
                        Graphics.Vty.Inline
                        Graphics.Vty.Inline.Unsafe
-                       Graphics.Vty.LLInput
+                       Graphics.Vty.Input
+                       Graphics.Vty.Input.Data
                        Graphics.Vty.Picture
                        Graphics.Vty.Terminal
                        Graphics.Text.Width
